--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.3",
     "ts-node": "^10.9.2",
+    "typescipt": "^1.0.0",
     "typescript": "^5.9.3"
   }
 }
