--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "babel-preset-expo": "^54.0.9",
     "expo": "~54.0.31",
     "expo-app-loading": "^2.1.1",
+    "expo-av": "^16.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-video": "^3.0.15",
     "firebase": "^12.7.0",
     "react": "^19.1.0",
     "react-native": "^0.81.5",
