--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,19 @@
     "@expo-google-fonts/poppins": "^0.4.1",
     "@expo-google-fonts/space-grotesk": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-picker/picker": "^2.11.4",
-    "@react-navigation/native": "^7.1.26",
-    "@react-navigation/native-stack": "^7.9.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.1",
+    "@react-navigation/native": "^7.1.27",
+    "@react-navigation/native-stack": "^7.9.1",
+    "babel-preset-expo": "^54.0.9",
     "expo": "~54.0.31",
     "expo-app-loading": "^2.1.1",
     "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
-    "firebase": "^9.23.0",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
+    "firebase": "^12.7.0",
+    "react": "^19.1.0",
+    "react-native": "^0.81.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
