--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-native-video": "^6.18.0"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^20.1.0",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
