--- a/frontend/.env
+++ b/frontend/.env
@@ -6,4 +6,4 @@ FIREBASE_STORAGE_BUCKET=onevoice-auth.firebasestorage.app
 FIREBASE_MESSAGING_SENDER_ID=199969728038
 FIREBASE_APP_ID=1:199969728038:web:ff97e2b64d1b0667cb68e7
 MONGODB_URI=mongodb+srv://yugenjr847:yugen842007@yugen.zbssgmq.mongodb.net/OneVoice
-BACKEND_URL=http://192.168.42.13:4000
+BACKEND_URL=http://192.168.42.13:4000 || http://10.242.218.241:4000
