--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,15 @@
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
+    "@react-navigation/stack": "^7.6.14",
     "babel-preset-expo": "^54.0.9",
     "expo": "~54.0.31",
     "expo-app-loading": "^2.1.1",
     "expo-audio": "^1.1.1",
+    "expo-av": "~16.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-video": "^3.0.15",
     "firebase": "^12.7.0",
     "react": "^19.1.0",
     "react-native": "^0.81.5",
