--- a/backend/package.json
+++ b/backend/package.json
@@ -10,5 +10,8 @@
     "ts-node": "^10.9.2",
     "typescipt": "^1.0.0",
     "typescript": "^5.9.3"
+  },
+  "scripts": {
+    "dev": "ts-node src/app.ts"
   }
 }
