--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,11 +28,13 @@
     "expo-video": "^3.0.15",
     "firebase": "^12.7.0",
     "react": "^19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "^0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-video": "^6.18.0"
+    "react-native-video": "^6.18.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@react-native-community/cli": "^20.1.0",
